Fixed line height of small text inputs on Safari

--- a/src/TextInput/styles.css
+++ b/src/TextInput/styles.css
@@ -10,7 +10,7 @@
   padding-bottom: 0;
   height: 32px;
   min-height: 32px;
-  line-height: 32px;
+  line-height: 20px;
 }
 
 .type_basic {
